--- a/css/style.css
+++ b/css/style.css
@@ -54,5 +54,46 @@ header nav ul {
 }
 
 h1 img {
-    margin-top: -5px;
+    margin-top: -45px;
+}
+
+h1 button {
+    position: relative;
+    margin-bottom: -225px;
+}
+
+h3 {
+    font-size: 25px;
+    text-align: center;
+    position: relative;
+    margin-top: -412px;
+    color: aqua;
+}
+
+.buscar input {
+    position: relative;
+    text-align: center;
+    width: 506px;
+    height: 36px;
+    margin-top: -2px;
+}
+
+.buscar input.boto {
+    background-color: aqua;
+    position: relative;
+    text-align: center;
+    width: 80px;
+    height: 36px;
+    margin-left: -20px;
+}
+
+.buscar h2 {
+    color: aquamarine;
+    font-size: 25px;
+}
+
+footer {
+    margin-top: 200px;
+    background-color: floralwhite;
+    font-size: 13px;
 }
